fix spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -120,6 +120,7 @@ body{
 }
 
 .teamMember{
+    padding: 20px 0 20px 0;
 }
 
 .dividerSpacing{
